kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/plus_commutative/src/nat.k
use super.*;

pub type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}
